--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ target 'serenityDigital' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'serenityDigitalTests' do
     inherit! :complete
     # Pods for testing
