--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -202,6 +202,7 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-safe-area-context')
+    implementation "androidx.appcompat:appcompat:1.0.0"
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
