--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,8 @@ target 'serenityDigital' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'serenityDigitalTests' do
     inherit! :complete
     # Pods for testing
