video player added

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,6 +20,8 @@ target 'serenityDigital' do
 
   pod 'react-native-video', :path => '../node_modules/react-native-video'
 
+  pod 'react-native-orientation-locker', :path => '../node_modules/react-native-orientation-locker'
+
   target 'serenityDigitalTests' do
     inherit! :complete
     # Pods for testing
