--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "i": "^0.3.7",
+    "npm": "^8.5.4",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
+    "react-native-media-controls": "^2.3.0",
     "react-native-modal": "^13.0.1",
+    "react-native-orientation-locker": "^1.4.0",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
+    "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0",
+    "react-native-video-controls": "^2.8.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0"
