--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0",
     "react-native-video-controls": "^2.8.1",
+    "react-native-webview": "^11.17.2",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0"
