--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -202,7 +202,11 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-safe-area-context')
-    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation ("androidx.appcompat:appcompat:1.3.1") {
+        version {
+            strictly '1.3.1'
+        }
+    }
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
