--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-BASE_URL=https://jinglad.com
+BASE_URL=https://serenitydigit.ca
 Google_oAuth_client_id=185193866210-p0fsmuhv3t9muct3m6n6janik9mkvpko.apps.googleusercontent.com
 ios_client_id=185193866210-79blt1jdioipfk2m62trnr8dovnombi6.apps.googleusercontent.com
